# riskmx-intelligence

./: .env.example  .gitignore  main.py  pyproject.toml
.kiro/specs/eda-crime-pipeline/: .config.kiro  requirements.md
.kiro/steering/: data-quality.md  eda-standards.md  github-standards.md  product.md  structure.md  tech.md
notebooks/: EDA_Crime.ipynb
scripts/: 00_project_check.py  01_download_raw_sesnsp.py  02_profile_raw_sesnsp.py  03_raw_to_bronze_sesnsp.py  04_validate_bronze_sesnsp.py  05_bronze_to_silver_sesnsp.py  06_validate_silver_sesnsp.py  07_run_data_quality_sesnsp.py
src/riskmx_intelligence/: settings.py
src/riskmx_intelligence/ingestion/: download.py
src/riskmx_intelligence/quality/: checks.py  report.py  results.py
src/riskmx_intelligence/transform/: columns.py
src/riskmx_intelligence/utils/: hashing.py
src/transformation/: transform_sesnsp.py
