[project]
name = "riskmx-intelligence"
version = "0.1.0"
description = "RiskMX Intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.1.0",
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pandera>=0.31.1",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riskmx_intelligence"]
